Fix: Markdown editor min-height alignment

--- a/app/src/styles/_variables.scss
+++ b/app/src/styles/_variables.scss
@@ -11,6 +11,7 @@
 	--content-padding: 12px;
 	--content-padding-bottom: 60px;
 	--input-height-tall: 168px;
+	--input-height-rich-text: 300px;
 	--input-height-max: 500px;
 	--form-column-width: 300px;
 	--form-column-min-width: 220px;
